<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:id="@+id/detail_txt_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/detail_dialog_txt_city_sample"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/detail_img_weather_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/day_clear_sky"/>

            <TextView
                    android:id="@+id/detail_txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_temp_sample"
                    android:textSize="35sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

        </LinearLayout>

        <TextView
                android:id="@+id/detail_txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/detail_dialog_txt_description_sample"
                android:textSize="13sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_low_title"
                    android:textSize="12sp"/>

            <TextView
                    android:id="@+id/detail_txt_low_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_low_temp_sample"
                    android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_high_title"
                    android:textSize="12sp"/>

            <TextView
                    android:id="@+id/detail_txt_high_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_high_temp_sample"
                    android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_humidity_title"
                    android:textSize="12sp"/>

            <TextView
                    android:id="@+id/detail_txt_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_humidity_sample"
                    android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_pressure_title"
                    android:textSize="12sp"/>

            <TextView
                    android:id="@+id/detail_txt_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_pressure_sample"
                    android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_wind_speed_title"
                    android:textSize="12sp"/>

            <TextView
                    android:id="@+id/detail_txt_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/detail_dialog_txt_wind_speed_sample"
                    android:textSize="12sp"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="40dp"
                android:background="#000"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="end"
                android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/detail_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/detail_dialog_btn_back_text"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/detail_btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/detail_dialog_btn_detail_text"/>

        </LinearLayout>


    </LinearLayout>



</com.google.android.material.card.MaterialCardView>

