<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dashboard_card"
        android:transitionName="@string/transition_string"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/dashboard_img_weather_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/day_clear_sky"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/dashboard_txt_city_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_card_txt_city"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dashboard_txt_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_card_txt_gps"
                        android:visibility="gone"/>

                <TextView
                        android:id="@+id/dashboard_txt_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_card_txt_temp"
                        android:textSize="35sp"/>

            </LinearLayout>

        </LinearLayout>


        <TextView
                android:id="@+id/dashboard_txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dashboard_card_txt_description"/>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>