<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_dialog_text_title"
            android:textStyle="bold"
            android:textSize="20sp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:background="#000000" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dialog_add_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_dialog_text_city_name_hint"
                android:layout_margin="10dp"
                android:completionThreshold="1"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/add_dialog_btn_add_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="end"
                android:text="@string/add_dialog_btn_text"/>
    </LinearLayout>

</LinearLayout>
